<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="summer.app.DiceActivity" >
    
    <item
        android:id="@+id/menu_stats"
        android:showAsAction="always|withText"        
        android:src="@drawable/stats"
        android:title="@string/menu_stats"/>
 
    <item
        android:id="@+id/menu_dices"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_dices">
        <menu>
            <item 
                android:id="@+id/d4"
                android:title="@string/d4"/>
            <item 
                android:id="@+id/d6"
                android:title="@string/d6"/>
            <item 
                android:id="@+id/d8"
                android:title="@string/d8"/>
            <item 
                android:id="@+id/d10"
                android:title="@string/d10"/>
            <item 
                android:id="@+id/d12"
                android:title="@string/d12"/>
            <item 
                android:id="@+id/d20"
                android:title="@string/d20"/>
            <item 
                android:id="@+id/d100"
                android:title="@string/d100"/> 
            <item 
                android:id="@+id/personalized"
                android:title="@string/custom"/>
        </menu>
        
     </item>
    
     <item
        android:id="@+id/menu_number"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_number"/>

</menu>
